cicd/k8s/ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    k8s-app: default-http-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    k8s-app: default-http-backend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: booking-ingress
spec:
  rules:
    - host: host-demo.info
      http:
        paths:
          - path: /
            backend:
              serviceName: booking-app
              servicePort: 80
